# NetworkDecoder

./: .gitignore  CLAUDE.md  DOC-RECONCILIATION.md  IMPLEMENTATION-ROADMAP.md  README.md  package-lock.json  package.json  vite.config.ts
.github/workflows/: codeql.yml
docs/: PORTFOLIO-DISPOSITION.md
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  main.rs  state.rs
src-tauri/src/buffer/: mod.rs  ring.rs
src-tauri/src/capture/: file.rs  live.rs  mod.rs
src-tauri/src/parser/: application.rs  cipher_suites.rs  ethernet.rs  ip.rs  mod.rs  transport.rs  types.rs
src-tauri/tests/fixtures/: dns.cap
src/components/: Onboarding.tsx
src/components/controls/: CaptureBar.tsx  FilterBar.tsx  ViewSwitcher.tsx
src/components/panels/: DetailPane.tsx  FieldExplainer.tsx  HexDump.tsx
src/components/views/: PacketListView.tsx  ProtocolCardView.tsx  SwimLaneView.tsx
src/hooks/: use-keyboard-shortcuts.ts  use-packet-stream.ts
src/lib/: filter.ts  protocol-colors.ts
src/stores/: packet-store.ts
src/types/: packets.ts
