[package]
name = "network-decoder"
version = "0.1.0"
description = "Network Protocol Decoder — packet capture and analysis"
authors = ["you"]
edition = "2021"

[lib]
name = "network_decoder_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
pcap = "2"
pnet = "0.35"
pnet_datalink = "0.35"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
